--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
             <img
               width="100%"
               height="100%"
-              src="images/drindu.jpg"
+              src="images/drindu.JPG"
               alt="Dr Indu's AyurClinic"
             />
           </div>
